# OBP-SDKs

./: .gitattributes  .gitignore  package-lock.json
.github/workflows/: publish-python.yml
example-apps/golang/: README.md  go.mod  main.go
example-apps/python/: README.md  main.py  pyproject.toml
example-apps/typescript/: README.md  main.ts  package-lock.json  package.json  tsconfig.json
generator/: config-csharp.yaml  config-dart.yaml  config-golang.yaml  config-java.yaml  config-kotlin.yaml  config-php.yaml  config-python.yaml  config-ruby.yaml  config-rust.yaml  config-scala.yaml  config-swift.yaml  config-typescript.yaml  fetch-spec.sh  generate.sh  simplify-spec.py
openapi-spec/: obp-openapi.json
sdks/csharp/: OpenBankProject.sln
sdks/dart/: README.md
sdks/golang/: README.md  api_abac.go  api_account.go  api_account_access.go  api_account_access_request.go  api_account_application.go  api_account_attribute.go  api_account_firehose.go  api_account_information_service_ais.go  api_account_metadata.go  api_account_public.go  api_aggregate_metrics.go  api_ai_agent.go  api_api.go  api_api_collection.go  api_api_product.go  api_api_product_attribute.go  api_atm.go  api_atm_attribute.go  api_attribute.go  api_authentication_type_validation.go  api_balance.go  api_bank.go  api_bank_attribute.go  api_branch.go  api_cache.go  api_card.go  api_card_attribute.go  api_channel.go  api_confirmation_of_funds_service_piis.go  api_connector.go  api_connector_method.go  api_consent.go  api_consumer.go  api_corporate_customer.go  api_counterparty.go  api_customer.go  (+801 more)
(+25114 files in other folders)
